--- a/website/contactengels.html
+++ b/website/contactengels.html
@@ -8,16 +8,16 @@
     <script src="app.js" defer></script>
     <title>LeonCallum</title>
 </head>
-<Body id="bodytickets">
+<Body id="bodycontact">
     <header id="header">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
             <ul class="head">
-                <li><a href="home.html">Home</a></li>
-                <li><a href="ticketsengels.html">Tickets</a></li>
-                <li><a href="history.html">History</a></li>
-                <li><a href="contactengels.html">Contact & info</a></li>
-                <li><a href="reviewsengels.html">Reviews</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Tickets.html">Tickets</a></li>
+                <li><a href="Geschiedenis.html">Geschiedenis</a></li>
+                <li><a href="contact.html">Contact & info</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
             </ul>
         </nav>
         <li class="taal"><a class="top" href="contactengels.html"><img class="engels" src="img/engels.svg" alt=""></a></li>
@@ -25,8 +25,130 @@
         <li class="taal"><a class="top" href="contact.html"><img class="nederlands" src="img/nederlands.svg" alt=""></a></li>
     </header>
     
-    <main id="tickets">
+    <main class="contact">
+        <div class="contact1">
+            <div class="contactH2">Contact</div>
+            <p style="font-size: 15px; letter-spacing: normal; justify-content: flex-start; display: flex; padding-left: 50px;">Do you have a question, comment or a nice message? Then take
+                <br>
+                 feel free to contact us!
+                 <br>
+                 <br>
+                 For bookings and other questions:
+                 <br>
+                 info@nationaalvideogamemuseum.nl
+                 <br>
+                 <br>
+                 For media and journalists:
+                 <br>
+                 pers@nationaalvideogamemuseum.nl
+                 <br>
+                 <br>
+                 For sponsorship and events:
+                 <br>
+                 business@nationaalvideogamemuseum.nl
+                 <br>
+                 <br>
+                 <p style="font-size: 30px; padding-left: 50px;">Adres
+                    <p style="font-size: 15px; padding-left: 50px;"> 
+                     Theaterplein 11
+                     <br>
+                     2711 EK Zoetermeer</p>
+                 </p> 
+                 <p style="font-size: 30px; padding-left: 50px; padding-top: 25px;">Telefoonnummer
+                     <p style="font-size: 15px; padding-left: 50px;"> 
+                         Algemeen: 079 – 360 27 18
+                         <br>
+                         Administratie en marketing: 079 – 785 39 31 
+                         <br>
+                         (Voor boekingen kunt u mailen naar
+                         <br>
+                         info@nationaalvideogamemuseum.nl)
+                  </p> 
+                  <p style="font-size: 30px; padding-left: 50px; padding-top: 25px;">Openingstijden 
+                     <p style="font-size: 15px; padding-left: 50px;"> 
+                         Maandag: gesloten
+                         <br>
+                         Dinsdag: gesloten
+                         <br>
+                         Woensdag: 10.00 - 18.00 uur
+                         <br>
+                         Donderdag: 10.00 - 18.00 uur
+                         <br>
+                         Vrijdag: 10.00 - 21.00 uur
+                         <br>
+                         Zaterdag: 10.00 - 18.00 uur
+                         <br>
+                         Zondag: 12.00 - 18.00 uur
+                         <br>
+ ​       <p style="font-size: 15px; padding-left:50px ;"> In de schoolvakanties zijn wij ook op maandag en dinsdag
+ <br>
+ geopend.</p>
+  </p> 
+​</p>
+</div>
+</main>
+<footer class="footerContact">
+    <div class="container">
+        <div class="row">
+            <div class="footer-col">
+                <h4>company</h4>
+                <ul>
+                    <li><a href="#">about us</a></li>
+                    <br>
+                    <li><a href="#">our services</a></li>
+                    <br>
+                    <li><a href="#">privacy policy</a></li>
+                    <br>
+                    <li><a href="#">affiliate program</a></li>
+                    <br>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>get help</h4>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">shipping</a></li>
+                    <li><a href="#">returns</a></li>
+                    <li><a href="#">order status</a></li>
+                    <li><a href="#">payment options</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>online shop</h4>
+                <ul>
+                    <li><a href="#">watch</a></li>
+                    <li><a href="#">bag</a></li>
+                    <li><a href="#">shoes</a></li>
+                    <li><a href="#">dress</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>follow us</h4>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
+
+
+
+
+
+
+
+
+
+
+    
+
+</Body>
+</html>
 
 
 
