--- a/website/home.html
+++ b/website/home.html
@@ -50,7 +50,7 @@
                         <img class="image2" src="img/herftst.svg" alt="">
                     </div>
                     <div class="info">
-                        <h2>Openings tijden</h2>
+                        <h2>opening hours</h2>
                         <p class="info">Monday Closed<br />
                             Tuesday Closed<br />
                             Wednesday 10am - 6pm<br />
