--- a/website/reviews.html
+++ b/website/reviews.html
@@ -28,7 +28,7 @@
     <main class="index">
             <div class="review1">
                 <div class="line1"></div>
-                    <img style="border-radius: 50%; border: 5px solid white; width: 400px; position: absolute; top: 30%; " src="img/download.jpg" alt="">
+                    <img style="border-radius: 50%; border: 5px solid white; width: 10vw; position: absolute; top: 30%; " src="img/download.jpg" alt="">
                 <div style="color: white; font-size: 42px; position: absolute; right: 50%; color: black;">Callum Andringa</div>
                 <div style="color: white; font-size: 25px; position: absolute; right: 40%; color: black; ">
                 <br>
