--- a/website/ticketsengels.html
+++ b/website/ticketsengels.html
@@ -26,6 +26,19 @@
     </header>
     
     <main id="tickets">
+        <div id="tsection">
+            <div class="geschiedenisinfo">
+                <h4>TICKETS</h4>
+                <p class="teksttickets">
+                    Buy your online ticket here, but you can also buy tickets at the box office!</br></br>
+                     Book your ticket now for a visit to our museum.
+                     When you book a ticket, you get access to our museum for 2 hours and you get to play all the games the museum offers.
+                     All arcade machines are 'free to play',
+                     so you don't need coins! Register now with your first and last name at our ticket provider Appybee and buy your tickets below!</br></br>
+                     Can't book tickets via the website? Then download the Appybee app in the Google Playstore or the Apple Appstore.
+
+            </div>
+        </div>
 
 
 
